try to fix grid on mobile (not working...)

--- a/mw-custom.scss
+++ b/mw-custom.scss
@@ -261,13 +261,13 @@ pre code {
   // border-radius: 0px;
   // border-color: $black;
   // padding: 0em;
-  // box-shadow: 10px 10px rgb(65, 65, 65);
+  //box-shadow: 10px 10px 1px #857c76;
   // &:hover {
   //   transform: translate(-5px, -5px);
   //   border-color: black;
   //   box-shadow: 15px 15px $mw-color;
   // }
-  border-radius: 3px;
+  border-radius: 5px;
 
   // rule when title-block and text-block in same div
   + .text-block {
